<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/teamLayoutWidth"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/teamLayoutWeight"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/imagePadding"
                    android:src="@drawable/jags" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="@dimen/scoreTxtPaddingBtm"
                    android:textColor="@color/scoreTxtColor"
                    android:textSize="@dimen/scoreTxtSize" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="touchdownTeamA"
                    android:text="@string/touchdownBtnTxt"
                    android:theme="@style/TeamOne.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="onePointConversionTeamA"
                    android:text="@string/onePntCnvBtnTxt"
                    android:theme="@style/TeamOne.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="twoPointTeamA"
                    android:text="@string/twoPntCnvBtnTxt"
                    android:theme="@style/TeamOne.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="fieldGoalTeamA"
                    android:text="@string/fieldGoalBtnTxt"
                    android:theme="@style/TeamOne.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="twoPointTeamA"
                    android:text="@string/safetyBtnTxt"
                    android:theme="@style/TeamOne.Button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/lineWidth"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:orientation="vertical"
                android:padding="@dimen/linePadding">

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/teamLayoutWidth"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/teamLayoutWeight"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/imagePadding"
                    android:src="@drawable/pats" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="@dimen/scoreTxtPaddingBtm"
                    android:textColor="@color/scoreTxtColor"
                    android:textSize="@dimen/scoreTxtSize" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="touchdownTeamB"
                    android:text="@string/touchdownBtnTxt"
                    android:theme="@style/TeamTwo.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="onePointConversionTeamB"
                    android:text="@string/onePntCnvBtnTxt"
                    android:theme="@style/TeamTwo.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="twoPointTeamB"
                    android:text="@string/twoPntCnvBtnTxt"
                    android:theme="@style/TeamTwo.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/teamBtnMarginBtm"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="fieldGoalTeamB"
                    android:text="@string/fieldGoalBtnTxt"
                    android:theme="@style/TeamTwo.Button" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/teamBtnMarginLftRt"
                    android:layout_marginRight="@dimen/teamBtnMarginLftRt"
                    android:onClick="twoPointTeamB"
                    android:text="@string/safetyBtnTxt"
                    android:theme="@style/TeamTwo.Button" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/resetBtnMarginTop"
            android:layout_weight="@dimen/resetBtnWeight"
            android:onClick="resetScore"
            android:text="@string/resetBtnTxt"
            android:theme="@style/Reset.Button" />

    </RelativeLayout>

</ScrollView>
